--- a/src/app/page/quiz/quiz.component.scss
+++ b/src/app/page/quiz/quiz.component.scss
@@ -1,7 +1,27 @@
 .quiz {
     padding: var(--padding);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: var(--padding);
 
     .card {
         padding: var(--padding);
+    }
+
+    .action-buttons {
+        display: flex;
+        gap: var(--padding);
+        justify-content: flex-end;
+
+        .button {
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-end;
+
+            .icon {
+                margin: 0;
+            }
+        }
     }
 }
