--- a/src/app/page/overview/overview.component.html
+++ b/src/app/page/overview/overview.component.html
@@ -1,15 +1,22 @@
 <div class="overview">
-    <h1>Overview</h1>
+    <h3>Repeat Master</h3>
 
-    <mat-card [routerLink]="'/quiz/'+quiz.id" class="card" appearance="outlined"
-        *ngFor="let quiz of quizes(); trackBy:trackBy">
-        <ng-content *ngIf="results() as results">
-            <mat-card-title>{{quiz.title}} ({{results[quiz.id].length || 0 }}/{{quiz.questionIds.length}}
-                questions)</mat-card-title>
-            <mat-card-content>{{quiz.description}}
-                <mat-icon class="arrow" aria-hidden="false" aria-label="goto quiz"
-                    fontIcon="keyboard_double_arrow_right">
-                </mat-icon></mat-card-content>
+    <ng-content *ngIf="results() as results">
+        <ng-content *ngIf="completedCount() as completedCount">
+            <mat-card [routerLink]="'/quiz/'+quiz.id" class="card" appearance="outlined"
+                *ngFor="let quiz of quizes(); trackBy:trackBy">
+                <mat-card-title>{{quiz.title}} ({{results[quiz.id].length || 0 }}/{{quiz.questionIds?.length ?? 0}}
+                    questions)</mat-card-title>
+                <mat-card-content>
+                    <div class="description">
+                        {{quiz.description}}
+                        <mat-icon class="arrow" aria-hidden="false" aria-label="goto quiz"
+                            fontIcon="keyboard_double_arrow_right">
+                        </mat-icon>
+                    </div>
+                    <div>Completed count: {{completedCount[quiz.id]}}</div>
+                </mat-card-content>
+            </mat-card>
         </ng-content>
-    </mat-card>
+    </ng-content>
 </div>
