--- a/src/app/page/overview/overview.component.scss
+++ b/src/app/page/overview/overview.component.scss
@@ -5,8 +5,12 @@
         padding: var(--padding);
         margin-bottom: var(--padding);
 
-        .arrow {
-            float: right;
+        .description {
+            margin: var(--padding) 0;
+
+            .arrow {
+                float: right;
+            }
         }
     }
 }
