quests for unit 3-4, dynamic question loading, ...

--- a/src/app/page/result/result.component.html
+++ b/src/app/page/result/result.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="result$() as result; else noQuiz" class="result">
-    <div>
+    <div class="container">
         <h3 class="header {{result.state}}" [ngSwitch]="result.state">
             <ng-content *ngSwitchCase="'complete'">
                 You answered all questions of correctly and completed this quest!
