--- a/src/app/page/overview/overview.component.scss
+++ b/src/app/page/overview/overview.component.scss
@@ -1,5 +1,7 @@
 .overview {
     padding: var(--padding);
+    max-width: 800px;
+    margin: 0 auto;
 
     .card {
         padding: var(--padding);
