--- a/src/app/page/result/result.component.scss
+++ b/src/app/page/result/result.component.scss
@@ -4,6 +4,8 @@
     flex-direction: column;
     justify-content: space-between;
     gap: var(--padding);
+    max-width: 800px;
+    margin: 0 auto;
 
     .container {
         display: flex;
