--- a/src/app/page/quiz/quiz.component.scss
+++ b/src/app/page/quiz/quiz.component.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     gap: var(--padding);
+    max-width: 800px;
+    margin: 0 auto;
 
     .card {
         padding: var(--padding);
