irregular verbs, styling, ...

--- a/src/app/component/question/placholder/placholder.component.html
+++ b/src/app/component/question/placholder/placholder.component.html
@@ -2,7 +2,7 @@
     <ng-content *ngFor="let part of parts()">
         <input *ngIf="part.isPlaceholder; else simpleText" matInput value="" spellcheck="false" autocomplete="off"
             autocorrect="off" autocapitalize="off" (change)="onInputChange($event, part.index!)"
-            [style.width]="part.width+'px'">
+            [style.width]="part.width+'px'" (keydown.enter)="next.emit()">
         <ng-template #simpleText><span>{{part.text}}</span></ng-template>
     </ng-content>
 </div>
