--- a/src/app/page/overview/overview.component.scss
+++ b/src/app/page/overview/overview.component.scss
@@ -6,6 +6,8 @@
     .card {
         padding: var(--padding);
         margin-bottom: var(--padding);
+        filter: var(--drop-shadow);
+        border-radius: var(--radius);
 
         .description {
             margin: var(--padding) 0;
