--- a/src/app/page/quiz/quiz.component.scss
+++ b/src/app/page/quiz/quiz.component.scss
@@ -8,6 +8,7 @@
 
     .card {
         padding: var(--padding);
+        border-radius: var(--radius);
 
         .question {
             margin: var(--padding) 0;
