--- a/src/app/page/result/result.component.scss
+++ b/src/app/page/result/result.component.scss
@@ -11,6 +11,8 @@
         display: flex;
         flex-direction: column;
         gap: var(--padding);
+        filter: var(--drop-shadow);
+        border-radius: var(--radius);
     }
 
     h3 {
@@ -32,6 +34,8 @@
     .card {
         padding: var(--padding);
         gap: var(--padding);
+        filter: var(--drop-shadow);
+        border-radius: var(--radius);
 
         .icon {
             float: right;
