--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ body {
     //background-image: url("assets/circle.png");
 
     --padding: 20px;
+    --padding-small: 10px;
     --color-wrong: #ba1a1a;
     --color-complete: #00ff00;
     --color-partial: #ffff00;
