--- a/src/app/component/overview/footer/footer.component.scss
+++ b/src/app/component/overview/footer/footer.component.scss
@@ -3,6 +3,9 @@
     flex-direction: column;
     gap: var(--padding);
     padding: var(--padding-small);
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 
     .row {
         display: flex;
